# sidekick-covid-tracker

./: .gitignore  .replit  app-new.py  app.py  app.yaml  controls.py  main.py  parser.py  pyproject.toml  requirements.txt
assets/: header.css  scripts.js
data/: 08-09-2020.csv  09-09-2020.csv  10-09-2020.csv  11-09-2020.csv  12-09-2020.csv  13-09-2020.csv  14-09-2020.csv  15-09-2020.csv  16-09-2020.csv  17-09-2020.csv  18-09-2020.csv  19-09-2020.csv  timeseries.csv  totals.csv
