[tool.poetry]
name = "courteousimpassionednetworking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pandas = "^1.1.2"
lxml = "^4.5.2"
cssselect = "^1.1.0"
selenium = "^3.141.0"
phantomjs = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
