[tool.poetry]
name = "courteousimpassionednetworking"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.2"
selenium = "^3.141.0"
requests = "^2.24.0"
dash = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
